--- a/Confidence-form.html
+++ b/Confidence-form.html
@@ -71,11 +71,12 @@
         .q {
             margin-top: -15px;
         }
-        .sir
-        {
+
+        .sir {
             margin-top: -15px;
         }
-        .only{
+
+        .only {
             text-align: center;
             text-decoration: aqua;
             text-decoration: solid;
@@ -109,12 +110,43 @@
                 Confidence coaching classes
                 ; I have read the “
                 Terms and Conditions
-                ” of the institute   given overleaf and agree to abide my the same" MY particulars are given below</p>
+                ” of the institute given overleaf and agree to abide my the same" MY particulars are given below</p>
 
 
 
-                <h3 class="only">THE FORM IS TO BE FILLED IN CAPITAL LETTERS ONLY"
-                </h3>
+            <h3 class="only">THE FORM IS TO BE FILLED IN CAPITAL LETTERS ONLY"
+            </h3>
+
+            <a>1) Name of the Student : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                . . .
+                Gender : Male <input type="checkbox"> </a> Female <input type="checkbox"> Nationality : . . . . . . . .
+            . . . . . .
+            <br>
+            <br>
+            2) Father / Guardian's Name : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            <br><br>
+            3) Email ID : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            <br><br>
+            4) Mobile Number:. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . Prosnal
+            Number : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            <br>
+            <br>
+
+            5) Date of Birth : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . Blood
+            Group : . . . . . . . . . . . . .
+            . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            <br><br>
+            6) Address of correspondence: . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+            <br><br>
+            7) Permanent Address : . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . State :
+            . . . . . . . . . . . . . . . . . . . . . . . . . . . . Pin Code: . . . . . . . . . . . . . . . . . .
+            <br><br>
+            8) Name of the school from where you appeared / Appraring for class : . . . . . . . . . . . . . . . . . . .
+            . . . . . . . . .
+            . . . . . . . . . . . . . . . . . . . . . . . . . .
         </fieldset>
 
 
