--- a/keyboard.html
+++ b/keyboard.html
@@ -37,6 +37,7 @@
         }
 
         .third {
+
             display: grid;
             grid-template-columns: 1.4fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1.2fr;
             grid-template-rows: 1fr;
@@ -84,7 +85,15 @@
             font-weight: bold;
             font-family: cursive;
             font-size: 13px;
-            border-color: rgb(248, 134, 227);
+            border: 2px solid rgb(248, 134, 227);
+            /* Set a default border */
+            transition: border-color 0.3s;
+            /* Smooth transition for border color */
+        }
+
+        .color:hover {
+            border-color: rgb(255, 230, 0);
+            /* Change border color on hover */
         }
 
         .item {
@@ -146,7 +155,8 @@
             <button class="color">F 10</button>
             <button class="color">F 11</button>
             <button class="color">F 12</button>
-            <button class="color" id="submit" onclick="clearFunction()" style="border-color: aqua; font-family: monospace;    background-color: rgb(33, 35, 34);">CLEAR</button>
+            <button class="color" id="submit" onclick="clearFunction()"
+                style="border-color: aqua; font-family: monospace;    background-color: rgb(33, 35, 34);">CLEAR</button>
         </div>
         <div class="sec">
             <button class="color" style="border-color: aqua;">~<br>`</button>
@@ -162,7 +172,7 @@
             <button class="color">0</button>
             <button class="color">*</button>
             <button class="color">+</button>
-            <button class="color"  style="border-color: aqua;">Backspace</button>
+            <button class="color" style="border-color: aqua;">Backspace</button>
         </div>
         <div class="third">
             <button class="color" style="border-color: aqua;">Bab</button>
@@ -178,7 +188,7 @@
             <button class="color">P</button>
             <button class="color">-</button>
             <button class="color">/</button>
-            <button class="color"  style="border-color: aqua;">=</button>
+            <button class="color" style="border-color: aqua;">=</button>
         </div>
         <div class="forth-row">
             <button class="color " style="border-color: aqua;">Caps lock</button>
@@ -193,7 +203,7 @@
             <button class="color">L</button>
             <button class="color">:<br>;</button>
             <button class="color">"<br>'</button>
-            <button class="color"  style="border-color: aqua;">Enter</button>
+            <button class="color" style="border-color: aqua;">Enter</button>
         </div>
         <div class="fifth-row">
             <button class="color" style="border-color: aqua;">Shift</button>
@@ -204,10 +214,11 @@
             <button class="color">B</button>
             <button class="color">N</button>
             <button class="color">M</button>
-            <button class="color">,<br><</button>
-            <button class="color">.<br>></button>
-            <button class="color">?<br>/</button>
-            <button class="color"  style="border-color: aqua;">Pause<br>Shift</button>
+            <button class="color">,<br>
+                << /button>
+                    <button class="color">.<br>></button>
+                    <button class="color">?<br>/</button>
+                    <button class="color" style="border-color: aqua;">Pause<br>Shift</button>
         </div>
         <div class="sixth-row">
             <button class="color" style="border-color: aqua;">Ctrl</button>
@@ -217,15 +228,14 @@
             <button class="color" style="border-color: aqua;">Space</button>
             <button class="color">Alt</button>
             <button class="color">Ctrl</button>
-            <button class="color"  style="border-color: rgb(255, 85, 0);">◄</button>
+            <button class="color" style="border-color: rgb(255, 85, 0);">◄</button>
             <div style="margin-right: 7px;">
-                <button class="color two-button"  style="border-color: rgb(255, 85, 0);">▲</button>
-                <button class="color two-button"  style="border-color: rgb(255, 85, 0);">▼</button>
+                <button class="color two-button" style="border-color: rgb(255, 85, 0);">▲</button>
+                <button class="color two-button" style="border-color: rgb(255, 85, 0);">▼</button>
             </div>
-            <button class="color"  style="border-color: rgb(255, 85, 0);">►</button>
+            <button class="color" style="border-color: rgb(255, 85, 0);">►</button>
         </div>
     </div>
 </body>
 
 </html>
-
