--- a/math.html
+++ b/math.html
@@ -10,19 +10,18 @@
         }
 
         .main-container {
-            background-image: url(  https://as2.ftcdn.net/v2/jpg/02/21/22/13/1000_F_221221333_4pd7XPLG3lSOJsSGOw323TifxvKIEwx8.jpg);
+            background-color: rgb(240, 240, 182);
             background-size: cover;
             height: 82vh;
             margin: 40px auto 0;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            border-style: solid;
-            box-shadow: 20px 40px 100px 20px rgb(13, 195, 219);
             width: 700px;
             max-width: 90%;
             /* Center container horizontally */
             box-sizing: border-box;
+            box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
         }
 
         .display {
@@ -33,6 +32,7 @@
             align-items: center;
             font-size: 22px;
         }
+
 
         .input-box {
             background-color: #0abeff;
@@ -61,7 +61,7 @@
             margin-left: 140px;
         }
 
-        .button + .button {
+        .button+.button {
             margin-left: 5%;
         }
 
@@ -71,21 +71,23 @@
                 width: 90%;
                 margin: 20px auto;
             }
+
             .input-box {
                 width: 80%;
                 font-size: 16px;
                 margin: 5%;
             }
+
             .button {
                 width: 45%;
                 font-size: 14px;
                 margin: 5px;
             }
+
             .display {
                 font-size: 18px;
             }
         }
-
     </style>
     <!-- using script -->
     <script>
