--- a/luckyy.html
+++ b/luckyy.html
@@ -12,7 +12,7 @@
                <!-- first division -->
                <div
                     style="height: 500px;width: 300px; border-style: solid ; border-color:black; margin:50px; margin-top:50px; margin: left 20px;  float: left;">
-                    <img style="text-align:left;border-radius: 40px;" src="./Home-image/hardikp.jpeg" width="90px"
+                    <img style="text-align:left;border-radius: 40px;" src="./my_image/Hardik pandya.jpeg" width="100px"
                          height="90px">
                     <p
                          style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; ">
