--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  
+
   <title>Home Page</title>
   <style>
     /* BODY  */
@@ -13,7 +13,8 @@
       background: #000000;
       color: #333;
     }
-/* CONTAINER  */
+
+    /* CONTAINER  */
     .container {
       max-width: 1500px;
       margin: 0 auto;
@@ -104,6 +105,7 @@
     .project-card:hover img {
       transform: scale(1.1);
     }
+
     /* FOOTER */
 
     .footer {
@@ -130,6 +132,7 @@
     a {
       text-decoration: none;
     }
+
     /* HOME */
 
     .home {
@@ -143,25 +146,57 @@
       color: #fff;
       font-size: 20px;
     }
-    img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-   
+    img:hover {
+      animation: shake 0.5s;
+      animation-iteration-count: infinite;
+    }
+
+    @keyframes shake {
+      0% {
+        transform: translate(1px, 1px) rotate(0deg);
+      }
+
+      10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+      }
+
+      20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+      }
+
+      30% {
+        transform: translate(3px, 2px) rotate(0deg);
+      }
+
+      40% {
+        transform: translate(1px, -1px) rotate(1deg);
+      }
+
+      50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+      }
+
+      60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+      }
+
+      70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+      }
+
+      80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+      }
+
+      90% {
+        transform: translate(1px, 2px) rotate(0deg);
+      }
+
+      100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+      }
+    }
   </style>
 </head>
 <!-- BODY -->
@@ -280,7 +315,7 @@
             <h3>Google Page </h3>
           </a>
         </div>
-        
+
       </div>
     </div>
   </div>
